--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 @import url(reset.css);
 @import url(common.css);
 @import url(font.css);
+@import url(scroll.css);
 @import url(index.css);
 @import url(flo.css);
 @import url(agoda.css);
@@ -9,4 +10,6 @@
 @import url(ops.css);
 @import url(mmca.css);
 @import url(havehad.css);
+
+
 
