--- a/assets/css/havehad.css
+++ b/assets/css/havehad.css
@@ -35,7 +35,7 @@
 }
 
 #havehad .intro_text p{
-  font-weight: 600;
+  font-weight: 800;
   color: #032057;
 }
 
@@ -93,28 +93,31 @@
 /* overview_sec */
 #havehad .overview_wrap{
   width: 100%;
-  max-width: 1400px;
   margin: 0 auto;
   text-align: center;
-  padding: 200px 0;
+  padding: 150px 0;
+  border: 1px solid #000;
+  background: #032057;
 }
 
 #havehad .overview_wrap h2{
   font-weight: 600;
-  color: #032057;
+  color: #fff;
   margin-bottom: 30px;
 }
 
 #havehad .overview_wrap h3{
   font-weight: 800;
-  color: #222;
+  color: #fff;
   margin-bottom: 50px;
+  font-size: 60px;
 }
 
 #havehad .overview_wrap p{
   margin-bottom: 50px;
-  color: #666;
+  color: #fff;
   margin-bottom: 100px;
+  line-height: 30px;
 }
 
 /* needs_sec */
@@ -358,6 +361,7 @@
 
 .main_img img{
   width: 1000px;
+  margin-left: 130px;
 }
 .main_sec h2{
   color: #032057;
@@ -366,7 +370,7 @@
 .main_text{
   position: absolute;
   top: 300px;
-  left: 600px;
+  left: 750px;
 }
 
 .main_text h3{
@@ -405,7 +409,7 @@
 
 .sub_text{
   position: absolute;
-  top: 600px;
+  top: 500px;
 }
 
 .sub_text h3{
@@ -419,6 +423,26 @@
   color: #333;
   font-size: 18px;
   line-height: 24px;
+}
+
+/* end_sec */
+.end_sec{
+  width: 100%;
+  height: 250px;
+  background: #032057;
+  margin: auto;
+  text-align: center;
+}
+
+.end_sec h2{
+  padding-top: 100px;
+  color: #fff;
+  font-weight: 600;
+}
+
+.end_sec p{
+  margin-top: 10px;
+  color: #fff;
 }
 
 
