--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -24,6 +24,7 @@
 
 /* Noto Sans KR */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+font-family: 'Noto Sans KR', sans-serif; 
 
 /* havehad */
 
