havehad 뷰페이지 수정

--- a/assets/css/havehad.css
+++ b/assets/css/havehad.css
@@ -286,7 +286,7 @@
   margin-bottom: 100px;
 }
 
-#havehad .design_sec .head2{
+#havehad .design_sec .title3{
   font-weight: 600;
   color: #032057;
   margin-bottom: 100px;
