--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -24,7 +24,7 @@
 
 /* Noto Sans KR */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
-font-family: 'Noto Sans KR', sans-serif; 
+/* font-family: 'Noto Sans KR', sans-serif; */ 
 
 /* havehad */
 
@@ -36,3 +36,8 @@ font-family: 'Noto Sans KR', sans-serif;
 	font-display: swap;
 	src: url('./woff2/PretendardVariable.woff2') format('woff2-variations');
 }
+
+/* IBM mono */
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+/* font-family: "IBM Plex Mono" */
