0702 코딩 2일차 완료

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -51,15 +51,23 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
-  font-size: 8rem;
+  font-size: 10rem;
   font-weight: 800;
   gap: 3rem;
 }
 
+/* .main_sec .main_text .text span{
+  display: block;
+  color: transparent;
+  background: linear-gradient(to right,#F56E4C, #FFB479);
+  -webkit-background-clip: text;
+} */
+
 .main_sec .main_text .text video{
-  width: 10rem;
-  height: 6rem;
+  width: 14rem;
+  height: 8rem;
   border-radius: 30px;
   object-fit: cover;
 }
@@ -70,8 +78,8 @@
 
 .main_sec .main_text .text:nth-child(2) img{
   animation: rotate-ani 4s ease-in-out 1s infinite ;
-  width: 8rem;
-  height: 8rem;
+  width: 9rem;
+  height: 9rem;
 }
 
 /* .main_sec:has(.text:nth-child(1) video:hover){
@@ -105,4 +113,25 @@
   display: flex;
   gap: 3rem;
   padding-bottom: 5rem;
+}
+
+@media (max-width: 1200px){
+  .main_sec .main_text .text{
+    font-size: 8rem;
+  }
+
+}
+
+@media (max-width: 768px){
+  .main_sec .main_text .text{
+    font-size: 6rem;
+  }
+
+}
+
+@media (max-width: 540px){
+  .main_sec .main_text .text{
+    font-size: 4.8rem;
+  }
+
 }
