--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,8 @@
+body{
+  width: 100%;
+  height: 100vh;
+}
+
 /* header_sec */
 .header_sec{
   width: 100%;
@@ -5,19 +10,19 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 3rem 5rem 0;
   margin: 0 auto;
+  padding: 3rem 5rem 0;
   font-family: "IBM Plex Mono";
-  letter-spacing: -10%;
   position: fixed;
   top: 0;
   color: #333;
   z-index: 99;
 }
 
-.header_sec .header_time{
+.header_sec .header_logo{
   font-size: 1.6rem;
-  font-weight: 600;
+  font-weight: bold;
+  font-family: "Cormorant Garamond", serif;
 }
 
 .header_sec .nav .util_menu{
@@ -26,14 +31,14 @@
 }
 
 .header_sec .nav .util_menu li{
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   font-weight: 600;
 }
 
 /* main_sec */
 .main_sec{
   width: 100%;
-  height: 100rem;
+  height: 100vh;
   margin: 0 auto;
   background: #fff;
   position: relative;
@@ -42,7 +47,7 @@
 .main_sec .main_text{
   width: 100%;
   position: absolute;
-  top: 45%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%,-50%);
 }
@@ -53,38 +58,147 @@
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  font-size: 10rem;
+  font-size: 8rem;
+  font-family: "Cormorant Garamond", serif;
   font-weight: 800;
   gap: 3rem;
 }
 
-/* .main_sec .main_text .text span{
-  display: block;
-  color: transparent;
-  background: linear-gradient(to right,#F56E4C, #FFB479);
-  -webkit-background-clip: text;
-} */
-
 .main_sec .main_text .text video{
-  width: 14rem;
-  height: 8rem;
-  border-radius: 30px;
+  width: 18rem;
+  height: 6rem;
+  border-radius: 10px;
   object-fit: cover;
 }
 
 .main_sec .main_text .text img{
-  display: block;
-}
-
-.main_sec .main_text .text:nth-child(2) img{
+  display: inline-block;
   animation: rotate-ani 4s ease-in-out 1s infinite ;
   width: 9rem;
   height: 9rem;
 }
 
-/* .main_sec:has(.text:nth-child(1) video:hover){
-  background: url(../images/index/moneffe_bg.png) no-repeat center/cover;
-} */
+/* about_sec */
+.about_sec{
+  width: 100%;
+  height: 100vh;
+  margin: 0 auto;
+}
+
+.about_sec .about_wrap{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 5rem;
+}
+
+.about_sec .about_wrap .about_text{
+  width: 100%;
+}
+
+/* project_sec */
+.project_sec .project_wrap{
+  width: 100%;
+  height: 150rem;
+  display: flex;
+  position: relative;
+  border: 1px solid #000;
+}
+
+.project_sec .project_wrap .project_title{
+  width: 100%;
+  height: 80rem;
+  font-size: 2.4rem;
+  text-align: left;
+  position: sticky;
+  top: 0;
+  border: 1px solid #000;
+}
+
+.project_sec .project_wrap .project_box{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  z-index: 1;
+  border: 1px solid #000;
+}
+
+.project_sec .project_wrap .gallery{
+  width: 60%;
+  border-radius: 1rem;
+  object-fit: cover;
+}
+
+.project_sec .project_wrap .project_gallery .gallery_text h3{
+  font-size: 3.2rem;
+}
+
+.project_sec .project_wrap .project_gallery .gallery_text p{
+  font-size: 2rem;
+}
+
+/* list_sec */
+.list_sec{
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 5rem;
+  position: relative;
+}
+
+.list_sec .title h2{
+  width: 100%;
+  margin-bottom: 1rem;
+  font-family: "IBM Plex Mono";
+  font-size: 3.6rem;
+}
+
+.list_sec .list_wrap{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Pretendard Variable';
+}
+
+.list_sec .list_wrap .list{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  border-top: 2px solid #333;
+  padding: 5rem;
+  transition: 0.2s;
+  font-size: 2.8rem;
+}
+
+.list_sec .list_wrap .list:last-child{
+  border-bottom: 2px solid #333;
+}
+
+.list_sec .list_wrap .list:hover{
+  background-color: #333;
+  color: #fff;
+}
+
+.list_sec .list_wrap .list .fade{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 35rem;
+  height: 25rem;
+  opacity: 0;
+}
+
+.list_sec .list_wrap .list .tag{
+  font-size: 2.4rem;
+}
+
+.list_sec .list_wrap .list .year{
+  font-size: 2.4rem;
+}
+
+
+
 
 /* animation */
 @keyframes rotate-ani{
@@ -101,7 +215,7 @@
   align-items: center;
   padding: 0 5rem;
   margin: 0 auto;
-  font-family: "IBM Plex Mono";
+  font-family: "Cormorant Garamond", serif;
   letter-spacing: -10%;
   position: fixed;
   bottom: 0;
@@ -115,9 +229,25 @@
   padding-bottom: 5rem;
 }
 
+#time{
+  font-weight: 600;
+}
+
 @media (max-width: 1200px){
   .main_sec .main_text .text{
     font-size: 8rem;
+  }
+
+}
+
+@media (max-width: 1024px){
+
+  .project_sec .title{
+    margin-bottom: 5rem;
+  }
+
+  .list_sec .list_wrap .list .tag{
+    font-size: 2rem;
   }
 
 }
@@ -127,11 +257,31 @@
     font-size: 6rem;
   }
 
+  /* project_sec */
+  .project_sec .project_wrap{
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .project_sec .project_wrap .project_title{
+    width: 100%;
+  }
+
+  .project_sec .project_wrap .project_box{
+    width: 100%;
+  }
+
+  /* list_sec */
+  .list_sec .list_wrap .list{
+    flex-direction: column;
+    font-size: 2.4rem;
+    padding: 2rem;
+  }
+  
 }
 
 @media (max-width: 540px){
   .main_sec .main_text .text{
     font-size: 4.8rem;
   }
-
 }
