--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -97,49 +97,69 @@ body{
 }
 
 /* project_sec */
+.projexct_sec{
+  padding: 0 5rem;
+}
+
 .project_sec .project_wrap{
   width: 100%;
-  height: 150rem;
+  max-width: 140rem;
+  margin: 0 auto 10rem;
+  height: 200rem;
   display: flex;
+  justify-content: space-between;
   position: relative;
-  border: 1px solid #000;
 }
 
 .project_sec .project_wrap .project_title{
-  width: 100%;
+  width: 40%;
   height: 80rem;
   font-size: 2.4rem;
   text-align: left;
   position: sticky;
+  padding-top: 20rem;
   top: 0;
-  border: 1px solid #000;
+}
+
+.project_sec .project_wrap .project_title .project_text h2{
+  font-size: 6rem;
+  font-family: "Cormorant Garamond", serif;
+  margin-bottom: 3rem;
+}
+
+.project_sec .project_wrap .project_title .project_text p{
+  font-size: 2rem;
+  color: #555;
 }
 
 .project_sec .project_wrap .project_box{
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 40%;
   z-index: 1;
-  border: 1px solid #000;
+  gap: 5rem;
 }
 
 .project_sec .project_wrap .gallery{
-  width: 60%;
+  width: 100%;
   border-radius: 1rem;
   object-fit: cover;
 }
 
-.project_sec .project_wrap .project_gallery .gallery_text h3{
-  font-size: 3.2rem;
+.project_sec .project_wrap .gallery .gallery_text h3{
+  font-size: 2.4rem;
 }
 
-.project_sec .project_wrap .project_gallery .gallery_text p{
-  font-size: 2rem;
+.project_sec .project_wrap .gallery .gallery_text p{
+  font-size: 1.8rem;
+  color: #555;
+  font-weight: 400;
 }
 
 /* list_sec */
 .list_sec{
   width: 100%;
+  height: 100rem;
   margin: 0 auto;
   padding: 0 5rem;
   position: relative;
@@ -233,42 +253,60 @@ body{
   font-weight: 600;
 }
 
+@media(max-width: 1400px){
+
+  .project_sec .project_wrap{
+    padding: 0 5rem;
+  }
+}
+
 @media (max-width: 1200px){
   .main_sec .main_text .text{
     font-size: 8rem;
   }
-
 }
 
 @media (max-width: 1024px){
 
-  .project_sec .title{
-    margin-bottom: 5rem;
+  .project_sec .project_wrap .project_title .project_text h2{
+    font-size: 4rem;
+  }
+
+  .project_sec .project_wrap .project_title .project_text p{
+    font-size: 1.6rem;
+  }
+}
+
+
+@media (max-width: 768px){
+
+  .project_sec .project_wrap .project_title{
+    padding-top: 0;
   }
 
   .list_sec .list_wrap .list .tag{
     font-size: 2rem;
   }
 
-}
-
-@media (max-width: 768px){
-  .main_sec .main_text .text{
-    font-size: 6rem;
-  }
-
   /* project_sec */
   .project_sec .project_wrap{
     flex-direction: column;
+    height: 170rem;
     gap: 1rem;
   }
 
   .project_sec .project_wrap .project_title{
     width: 100%;
+    margin-bottom: 5rem;
+    position: relative;
   }
 
   .project_sec .project_wrap .project_box{
     width: 100%;
+  }
+
+  .main_sec .main_text .text{
+    font-size: 6rem;
   }
 
   /* list_sec */
@@ -280,8 +318,15 @@ body{
   
 }
 
+
+
 @media (max-width: 540px){
   .main_sec .main_text .text{
     font-size: 4.8rem;
+  }
+
+  .project_sec .project_wrap{
+    flex-direction: column;
+    height: 150rem;
   }
 }
