--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -20,17 +20,11 @@ body{
 }
 
 .header_sec .header_logo{
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   font-weight: bold;
-  font-family: "Cormorant Garamond", serif;
 }
 
-.header_sec .nav .util_menu{
-  display: flex;
-  gap: 2rem;
-}
-
-.header_sec .nav .util_menu li{
+.header_sec .header_time{
   font-size: 1.6rem;
   font-weight: 600;
 }
@@ -104,15 +98,19 @@ body{
 .project_sec .project_wrap{
   width: 100%;
   max-width: 140rem;
-  margin: 0 auto 10rem;
-  height: 200rem;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   position: relative;
+  background: transparent;
+}
+
+.project_sec .project_wrap:has(.project_box:hover){
+  background: url(../images/index/moneffe_bg.png) no-repeat center/cover;
 }
 
 .project_sec .project_wrap .project_title{
-  width: 40%;
+  width: 35%;
   height: 80rem;
   font-size: 2.4rem;
   text-align: left;
@@ -128,16 +126,17 @@ body{
 }
 
 .project_sec .project_wrap .project_title .project_text p{
-  font-size: 2rem;
+  font-size: 1.8rem;
+  font-weight: 400;
   color: #555;
 }
 
 .project_sec .project_wrap .project_box{
   display: flex;
   flex-direction: column;
-  width: 40%;
+  width: 50%;
   z-index: 1;
-  gap: 5rem;
+  gap: 7rem;
 }
 
 .project_sec .project_wrap .gallery{
@@ -146,13 +145,22 @@ body{
   object-fit: cover;
 }
 
+.project_sec .project_wrap .gallery img{
+  border-radius: 1rem;
+  width: 100%;
+  border: 1px solid #f0f0f0;
+}
+
 .project_sec .project_wrap .gallery .gallery_text h3{
   font-size: 2.4rem;
+  margin-top: 1rem;
+  color: #333;
 }
 
 .project_sec .project_wrap .gallery .gallery_text p{
   font-size: 1.8rem;
-  color: #555;
+  margin-top: 1rem;
+  color: #666;
   font-weight: 400;
 }
 
@@ -160,14 +168,14 @@ body{
 .list_sec{
   width: 100%;
   height: 100rem;
-  margin: 0 auto;
+  margin: 10rem auto 0;
   padding: 0 5rem;
   position: relative;
 }
 
 .list_sec .title h2{
   width: 100%;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
   font-family: "IBM Plex Mono";
   font-size: 3.6rem;
 }
@@ -207,6 +215,7 @@ body{
   width: 35rem;
   height: 25rem;
   opacity: 0;
+  object-fit: cover;
 }
 
 .list_sec .list_wrap .list .tag{
@@ -216,9 +225,6 @@ body{
 .list_sec .list_wrap .list .year{
   font-size: 2.4rem;
 }
-
-
-
 
 /* animation */
 @keyframes rotate-ani{
@@ -231,22 +237,22 @@ body{
   width: 100%;
   height: 2rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 0 5rem;
   margin: 0 auto;
-  font-family: "Cormorant Garamond", serif;
-  letter-spacing: -10%;
   position: fixed;
   bottom: 0;
   color: #555;
   z-index: 99;
 }
 
-.footer_sec .footer_left, .footer_right{
+.header_sec .nav .util_menu{
   display: flex;
-  gap: 3rem;
-  padding-bottom: 5rem;
+  font-size: 1.6rem;
+  gap: 5rem;
+  color: #333;
+  font-weight: 600;
 }
 
 #time{
@@ -275,28 +281,16 @@ body{
   .project_sec .project_wrap .project_title .project_text p{
     font-size: 1.6rem;
   }
-}
-
-
-@media (max-width: 768px){
-
-  .project_sec .project_wrap .project_title{
-    padding-top: 0;
-  }
-
-  .list_sec .list_wrap .list .tag{
-    font-size: 2rem;
-  }
 
   /* project_sec */
   .project_sec .project_wrap{
     flex-direction: column;
-    height: 170rem;
     gap: 1rem;
   }
 
   .project_sec .project_wrap .project_title{
     width: 100%;
+    height: 40rem;
     margin-bottom: 5rem;
     position: relative;
   }
@@ -308,6 +302,14 @@ body{
   .main_sec .main_text .text{
     font-size: 6rem;
   }
+}
+
+
+@media (max-width: 768px){
+
+  .list_sec .list_wrap .list .tag{
+    font-size: 2rem;
+  }
 
   /* list_sec */
   .list_sec .list_wrap .list{
@@ -315,18 +317,10 @@ body{
     font-size: 2.4rem;
     padding: 2rem;
   }
-  
 }
-
-
 
 @media (max-width: 540px){
   .main_sec .main_text .text{
     font-size: 4.8rem;
-  }
-
-  .project_sec .project_wrap{
-    flex-direction: column;
-    height: 150rem;
   }
 }
