--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -41,7 +41,7 @@ body{
 .main_sec .main_text{
   width: 100%;
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
 }
@@ -52,15 +52,15 @@ body{
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  font-size: 8rem;
+  font-size: 12rem;
   font-family: "Cormorant Garamond", serif;
   font-weight: 800;
   gap: 3rem;
 }
 
 .main_sec .main_text .text video{
-  width: 18rem;
-  height: 6rem;
+  width: 20rem;
+  height: 10rem;
   border-radius: 10px;
   object-fit: cover;
 }
@@ -68,26 +68,42 @@ body{
 .main_sec .main_text .text img{
   display: inline-block;
   animation: rotate-ani 4s ease-in-out 1s infinite ;
-  width: 9rem;
-  height: 9rem;
+  width: 13rem;
+  height: 13rem;
 }
 
 /* about_sec */
-.about_sec{
-  width: 100%;
-  height: 100vh;
-  margin: 0 auto;
-}
-
 .about_sec .about_wrap{
   display: flex;
-  justify-content: space-between;
+  width: 100%;
+  justify-content: center;
   align-items: center;
   padding: 0 5rem;
+  margin: 0 auto 20rem;
+  gap: 10rem;
+}
+
+.about_sec .about_wrap .profile_img{
+  width: 35%;
+}
+
+.about_sec .about_wrap img{
+  width: 100%;
 }
 
 .about_sec .about_wrap .about_text{
-  width: 100%;
+  width: 40%;
+}
+
+.about_sec .about_wrap .about_text h2{
+  font-size: 4rem;
+  font-family: "Cormorant Garamond", serif;
+  margin-bottom: 3rem;
+}
+
+.about_sec .about_wrap .about_text p{
+  font-size: 1.8rem;
+  color: #555;
 }
 
 /* project_sec */
@@ -105,9 +121,9 @@ body{
   background: transparent;
 }
 
-.project_sec .project_wrap:has(.project_box:hover){
+/* .project_sec .project_wrap:has(.project_box:hover){
   background: url(../images/index/moneffe_bg.png) no-repeat center/cover;
-}
+} */
 
 .project_sec .project_wrap .project_title{
   width: 35%;
@@ -120,7 +136,7 @@ body{
 }
 
 .project_sec .project_wrap .project_title .project_text h2{
-  font-size: 6rem;
+  font-size: 4rem;
   font-family: "Cormorant Garamond", serif;
   margin-bottom: 3rem;
 }
@@ -167,7 +183,6 @@ body{
 /* list_sec */
 .list_sec{
   width: 100%;
-  height: 100rem;
   margin: 10rem auto 0;
   padding: 0 5rem;
   position: relative;
@@ -220,6 +235,7 @@ body{
 
 .list_sec .list_wrap .list .tag{
   font-size: 2.4rem;
+  text-align: left;
 }
 
 .list_sec .list_wrap .list .year{
@@ -273,6 +289,21 @@ body{
 }
 
 @media (max-width: 1024px){
+
+  .about_sec .about_wrap{
+    flex-direction: column;
+    gap: 10rem;
+    margin: 0 auto 1rem;
+  }
+
+  .about_sec .about_wrap .profile_img{
+    width: 100%;
+  }
+
+  .about_sec .about_wrap .about_text{
+  width: 100%;
+  text-align: center;
+}
 
   .project_sec .project_wrap .project_title .project_text h2{
     font-size: 4rem;
