--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,8 +1,3 @@
-body{
-  width: 100%;
-  height: 100vh;
-}
-
 /* header_sec */
 .header_sec{
   width: 100%;
@@ -12,7 +7,7 @@ body{
   align-items: center;
   margin: 0 auto;
   padding: 3rem 5rem 0;
-  font-family: "IBM Plex Mono";
+  font-family: "Cormorant Garamond", serif;
   position: fixed;
   top: 0;
   color: #333;
@@ -20,13 +15,9 @@ body{
 }
 
 .header_sec .header_logo{
-  font-size: 1.4rem;
-  font-weight: bold;
-}
-
-.header_sec .header_time{
-  font-size: 1.6rem;
-  font-weight: 600;
+  font-size: 1.2rem;
+  font-weight: 400;
+  font-family: "Cormorant Garamond", serif;
 }
 
 /* main_sec */
@@ -46,6 +37,54 @@ body{
   transform: translate(-50%,-50%);
 }
 
+
+.main_sec .tl, .tr, .bl, .br{
+  width: 5rem;
+  height: 5rem;
+  z-index: 10;
+}
+
+.main_sec .tl{
+  top: 5rem;
+  left: 5rem;
+  border-top: 2px solid #f0f0f0;
+  border-left: 2px solid #f0f0f0;
+  position: fixed;
+}
+
+.main_sec .tr{
+  top: 5rem;
+  right: 5rem;
+  border-top: 2px solid #f0f0f0;
+  border-right: 2px solid #f0f0f0;
+  position: fixed;
+}
+
+.main_sec .bl{
+  bottom: 5rem;
+  left: 5rem;
+  border-bottom: 2px solid #f0f0f0;
+  border-left: 2px solid #f0f0f0;
+  position: fixed;
+}
+
+.main_sec .br{
+  bottom: 5rem;
+  right: 5rem;
+  border-bottom: 2px solid #f0f0f0;
+  border-right: 2px solid #f0f0f0;
+  position: fixed;
+}
+
+.main_sec .time{
+  width: 100%;
+  bottom: 4%;
+  position: fixed;
+  font-size: 1.8rem;
+  font-weight: 400;
+  text-align: center;
+}
+
 .main_sec .main_text .text{
   width: 100%;
   display: flex;
@@ -63,129 +102,155 @@ body{
   height: 10rem;
   border-radius: 10px;
   object-fit: cover;
-}
-
-.main_sec .main_text .text img{
-  display: inline-block;
-  animation: rotate-ani 4s ease-in-out 1s infinite ;
-  width: 13rem;
-  height: 13rem;
+  display: block;
 }
 
 /* about_sec */
-.about_sec .about_wrap{
-  display: flex;
+.about_sec{
   width: 100%;
+  position: relative;
+}
+
+.catories_container {
+  z-index: 1;
+  width: 100%;
+  height: 100vh;
+  display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 5rem;
-  margin: 0 auto 20rem;
-  gap: 10rem;
+  flex-direction: column;
 }
 
-.about_sec .about_wrap .profile_img{
-  width: 35%;
-}
-
-.about_sec .about_wrap img{
+.categories {
+  display: flex;
   width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 1rem;
 }
 
-.about_sec .about_wrap .about_text{
-  width: 40%;
+.categories_link {
+  position: relative;
+  margin: 0.4rem;
+  padding: 0.6rem 1.82rem;
 }
 
-.about_sec .about_wrap .about_text h2{
-  font-size: 4rem;
-  font-family: "Cormorant Garamond", serif;
-  margin-bottom: 3rem;
+.categories_border {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  z-index: 1;
+  border: 3px solid #000;
+  border-radius: 10rem;
+  opacity: 0.35;
+}
+.categories_link-text {
+  position: relative;
+  z-index: 2;
+  font-size: 6rem;
+}
+.w-inline-block {
+  max-width: 100%;
+  display: inline-block;
 }
 
-.about_sec .about_wrap .about_text p{
-  font-size: 1.8rem;
-  color: #555;
-}
-
-/* project_sec */
-.projexct_sec{
-  padding: 0 5rem;
-}
-
-.project_sec .project_wrap{
+.about_sec .about_title{
   width: 100%;
   max-width: 140rem;
+  height: 100vh;
   margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  background: transparent;
+  text-align: center;
 }
 
-/* .project_sec .project_wrap:has(.project_box:hover){
-  background: url(../images/index/moneffe_bg.png) no-repeat center/cover;
-} */
-
-.project_sec .project_wrap .project_title{
-  width: 35%;
-  height: 80rem;
-  font-size: 2.4rem;
-  text-align: left;
-  position: sticky;
-  padding-top: 20rem;
-  top: 0;
-}
-
-.project_sec .project_wrap .project_title .project_text h2{
-  font-size: 4rem;
-  font-family: "Cormorant Garamond", serif;
-  margin-bottom: 3rem;
-}
-
-.project_sec .project_wrap .project_title .project_text p{
-  font-size: 1.8rem;
-  font-weight: 400;
+.about_sec .about_title h2{
+  font-size: 3.2rem;
   color: #555;
+  margin-bottom: 5rem;
 }
 
-.project_sec .project_wrap .project_box{
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  z-index: 1;
-  gap: 7rem;
-}
-
-.project_sec .project_wrap .gallery{
-  width: 100%;
-  border-radius: 1rem;
-  object-fit: cover;
-}
-
-.project_sec .project_wrap .gallery img{
-  border-radius: 1rem;
-  width: 100%;
-  border: 1px solid #f0f0f0;
-}
-
-.project_sec .project_wrap .gallery .gallery_text h3{
-  font-size: 2.4rem;
-  margin-top: 1rem;
+.about_sec .about_title h3{
+  font-size: 4.8rem;
+  margin-bottom: 3rem;
   color: #333;
 }
 
-.project_sec .project_wrap .gallery .gallery_text p{
+.about_sec .about_title p{
   font-size: 1.8rem;
-  margin-top: 1rem;
   color: #666;
+}
+
+/* project_sec */
+.project_sec{
+  width: 100%;
+  height: 110vh;
+  position: relative;
+}
+
+.project_box:hover .header_sec{
+  color: #fff;
+}
+
+.sec{
+  width: 100%; 
+  height: 100%;
+}
+/* 각 섹션별 배경색 설정 */
+.project_box {
+  width: 100%;
+  height: 100%;
+  box-shadow: 0px 0px 30px rgba(0,0,0,0.3); 
+  overflow: hidden; 
+  height: 100%;
+  position: relative;
+  color: #fff;
+  z-index: 1;
+}
+
+.project_box video{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: block;
+}
+
+.project_box .project_title{
+  position: fixed;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+}
+
+.project_box .project_title h2{
+  font-family: "Cormorant Garamond", serif;
+  font-size: 8rem;
+  font-weight: 500;
+}
+
+.project_box .project_title p{
+  font-size: 1.8rem;
   font-weight: 400;
 }
 
 /* list_sec */
 .list_sec{
-  width: 100%;
-  margin: 10rem auto 0;
-  padding: 0 5rem;
+  margin-top: 320rem;
   position: relative;
+  width: 100%;
+  height: 100vh;
+  padding: 0 5rem;
+  background-color: #fff;
 }
 
 .list_sec .title h2{
@@ -197,6 +262,7 @@ body{
 
 .list_sec .list_wrap{
   width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -209,9 +275,10 @@ body{
   display: flex;
   justify-content: space-between;
   border-top: 2px solid #333;
-  padding: 5rem;
+  padding: 10rem 5rem;
   transition: 0.2s;
-  font-size: 2.8rem;
+  font-size: 2.4rem;
+  font-weight: 400;
 }
 
 .list_sec .list_wrap .list:last-child{
@@ -234,18 +301,12 @@ body{
 }
 
 .list_sec .list_wrap .list .tag{
-  font-size: 2.4rem;
+  font-size: 2rem;
   text-align: left;
 }
 
 .list_sec .list_wrap .list .year{
   font-size: 2.4rem;
-}
-
-/* animation */
-@keyframes rotate-ani{
-  from {transform: rotate(0deg);}
-  to {transform: rotate(360deg);}
 }
 
 /* contact_sec */
@@ -286,15 +347,15 @@ body{
   font-weight: 600;
 }
 
-#time{
-  font-weight: 600;
+.time{
+  width: 100%;
+  padding: 0 5rem;
+  display: flex;
+  justify-content: space-between;
 }
 
-@media(max-width: 1400px){
-
-  .project_sec .project_wrap{
-    padding: 0 5rem;
-  }
+.time h2{
+  font-size: 1.6rem;
 }
 
 @media (max-width: 1200px){
@@ -319,31 +380,6 @@ body{
   width: 100%;
   text-align: center;
 }
-
-  .project_sec .project_wrap .project_title .project_text h2{
-    font-size: 4rem;
-  }
-
-  .project_sec .project_wrap .project_title .project_text p{
-    font-size: 1.6rem;
-  }
-
-  /* project_sec */
-  .project_sec .project_wrap{
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  .project_sec .project_wrap .project_title{
-    width: 100%;
-    height: 40rem;
-    margin-bottom: 5rem;
-    position: relative;
-  }
-
-  .project_sec .project_wrap .project_box{
-    width: 100%;
-  }
 
   .main_sec .main_text .text{
     font-size: 6rem;
