--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -108,63 +108,11 @@
 /* about_sec */
 .about_sec{
   width: 100%;
-  position: relative;
-}
-
-.catories_container {
-  z-index: 1;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.categories {
-  display: flex;
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 1rem;
-  margin-bottom: 1rem;
-}
-
-.categories_link {
-  position: relative;
-  margin: 0.4rem;
-  padding: 0.6rem 1.82rem;
-}
-
-.categories_border {
-  position: absolute;
-  left: 0%;
-  top: 0%;
-  right: 0%;
-  bottom: 0%;
-  z-index: 1;
-  border: 3px solid #000;
-  border-radius: 10rem;
-  opacity: 0.35;
-}
-.categories_link-text {
-  position: relative;
-  z-index: 2;
-  font-size: 6rem;
-}
-.w-inline-block {
-  max-width: 100%;
-  display: inline-block;
+  min-height: 100vh;
 }
 
 .about_sec .about_title{
   width: 100%;
-  max-width: 140rem;
-  height: 100vh;
-  margin: 0 auto;
   text-align: center;
 }
 
@@ -205,7 +153,6 @@
   width: 100%;
   height: 100%;
   box-shadow: 0px 0px 30px rgba(0,0,0,0.3); 
-  overflow: hidden; 
   height: 100%;
   position: relative;
   color: #fff;
@@ -245,7 +192,7 @@
 
 /* list_sec */
 .list_sec{
-  margin-top: 320rem;
+  /* margin-top: 320rem; */
   position: relative;
   width: 100%;
   height: 100vh;
@@ -365,21 +312,6 @@
 }
 
 @media (max-width: 1024px){
-
-  .about_sec .about_wrap{
-    flex-direction: column;
-    gap: 10rem;
-    margin: 0 auto 1rem;
-  }
-
-  .about_sec .about_wrap .profile_img{
-    width: 100%;
-  }
-
-  .about_sec .about_wrap .about_text{
-  width: 100%;
-  text-align: center;
-}
 
   .main_sec .main_text .text{
     font-size: 6rem;
