0707 time 위치 수정

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,16 +1,20 @@
+body{
+  background-color: #000;
+}
+
 /* header_sec */
 .header_sec{
   width: 100%;
   height: 2rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin: 0 auto;
   padding: 3rem 5rem 0;
   font-family: "Cormorant Garamond", serif;
   position: fixed;
   top: 0;
-  color: #333;
+  color: #fff;
   z-index: 99;
 }
 
@@ -25,7 +29,7 @@
   width: 100%;
   height: 100vh;
   margin: 0 auto;
-  background: #fff;
+  background: #000;
   position: relative;
 }
 
@@ -45,7 +49,7 @@
 }
 
 .main_sec .tl{
-  top: 5rem;
+  top: 7rem;
   left: 5rem;
   border-top: 2px solid #f0f0f0;
   border-left: 2px solid #f0f0f0;
@@ -53,7 +57,7 @@
 }
 
 .main_sec .tr{
-  top: 5rem;
+  top: 7rem;
   right: 5rem;
   border-top: 2px solid #f0f0f0;
   border-right: 2px solid #f0f0f0;
@@ -61,7 +65,7 @@
 }
 
 .main_sec .bl{
-  bottom: 5rem;
+  bottom: 7rem;
   left: 5rem;
   border-bottom: 2px solid #f0f0f0;
   border-left: 2px solid #f0f0f0;
@@ -69,7 +73,7 @@
 }
 
 .main_sec .br{
-  bottom: 5rem;
+  bottom: 7rem;
   right: 5rem;
   border-bottom: 2px solid #f0f0f0;
   border-right: 2px solid #f0f0f0;
@@ -78,11 +82,41 @@
 
 .main_sec .time{
   width: 100%;
-  bottom: 4%;
+  bottom: 7%;
   position: fixed;
   font-size: 1.8rem;
   font-weight: 400;
   text-align: center;
+}
+
+.main_sec .nav .util_menu{
+  display: inline-block;
+  font-size: 1.6rem;
+  gap: 10rem;
+  color: #fff;
+  font-weight: 600;
+  font-family: "IBM Plex Mono";
+  position: fixed;
+  top: 40%;
+  left: 3%;
+  z-index: 1;
+}
+
+.main_sec .nav .util_menu li{
+  margin-bottom: 3rem;
+}
+
+.time{
+  width: 100%;
+  padding: 0 5rem;
+  display: flex;
+  justify-content: center;
+  color: #fff;
+  z-index: 10;
+}
+
+.time h2{
+  font-size: 1.4rem;
 }
 
 .main_sec .main_text .text{
@@ -93,8 +127,9 @@
   align-items: center;
   font-size: 12rem;
   font-family: "Cormorant Garamond", serif;
-  font-weight: 800;
+  font-weight: 600;
   gap: 3rem;
+  color: #fff;
 }
 
 .main_sec .main_text .text video{
@@ -108,7 +143,9 @@
 /* about_sec */
 .about_sec{
   width: 100%;
-  min-height: 100vh;
+  height: 110vh;
+  position: relative;
+  background-color: #000;
 }
 
 .about_sec .about_title{
@@ -116,23 +153,40 @@
   max-width: 140rem;
   margin: 0 auto;
   text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
 
 .about_sec .about_title h2{
-  font-size: 2.8rem;
-  color: #555;
+  font-size: 2.4rem;
+  color: #a50000;
+  font-weight: 600;
   margin-bottom: 5rem;
+  position: relative;
+}
+
+.about_sec .about_title h2::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 54%;
+  width: 2rem;
+  height: 2rem;
+  background-color: #a50000;
+  border-radius: 3rem;
 }
 
 .about_sec .about_title h3{
   font-size: 4.8rem;
   margin-bottom: 3rem;
-  color: #333;
+  color: #fff;
 }
 
 .about_sec .about_title p{
   font-size: 1.8rem;
-  color: #666;
+  color: #fff;
 }
 
 /* project_sec */
@@ -150,8 +204,6 @@
 .project_box {
   width: 100%;
   height: 100%;
-  box-shadow: 0px 0px 30px rgba(0,0,0,0.3); 
-  height: 100%;
   position: relative;
   color: #fff;
   z-index: 1;
@@ -167,6 +219,15 @@
   right: 0;
   bottom: 0;
   display: block;
+}
+
+.sec::before{
+  width: 100%;
+  height: 100%;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .project_box .project_title{
@@ -190,29 +251,30 @@
 
 /* list_sec */
 .list_sec{
+  padding: 10rem 0;
   margin-top: 10rem;
   position: relative;
-  width: 100%;
-  height: 100vh;
-  padding: 0 5rem;
-  background-color: #fff;
-  color: #333;
+  background-color: #000;
+  color: #fff;
 }
 
-.list_sec .title h2{
+.list_sec .list_title{
   width: 100%;
-  margin-bottom: 3rem;
   font-family: "IBM Plex Mono";
-  font-size: 3.6rem;
+  font-size: 2rem;
+  margin-bottom: 5rem;
+  text-align: center;
 }
 
 .list_sec .list_wrap{
   width: 100%;
+  height: 110vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: 'Pretendard Variable';
+  padding: 5rem 0;
 }
 
 .list_sec .list_wrap .list{
@@ -226,12 +288,8 @@
   font-weight: 400;
 }
 
-.list_sec .list_wrap .list:last-child{
-  border-bottom: 2px solid #f0f0f0;
-}
-
 .list_sec .list_wrap .list:hover{
-  background-color: #333;
+  background-color: #222;
   color: #fff;
 }
 
@@ -280,27 +338,8 @@
   margin: 0 auto;
   position: fixed;
   bottom: 0;
-  color: #555;
+  color: #fff;
   z-index: 99;
-}
-
-.header_sec .nav .util_menu{
-  display: flex;
-  font-size: 1.6rem;
-  gap: 5rem;
-  color: #333;
-  font-weight: 600;
-}
-
-.time{
-  width: 100%;
-  padding: 0 5rem;
-  display: flex;
-  justify-content: space-between;
-}
-
-.time h2{
-  font-size: 1.6rem;
 }
 
 @media (max-width: 1200px){
