--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -94,7 +94,7 @@ body{
   font-size: 1.6rem;
   gap: 10rem;
   color: #fff;
-  font-weight: 600;
+  font-weight: 300;
   font-family: "IBM Plex Mono";
   position: fixed;
   top: 40%;
@@ -149,13 +149,14 @@ body{
   width: 100%;
   height: 110vh;
   position: relative;
-  background-color: #222;
+  background-color: #111;
 }
 
 .about_sec .about_title{
   width: 100%;
   max-width: 140rem;
   margin: 0 auto;
+  padding: 0 5rem;
   text-align: center;
   position: absolute;
   top: 50%;
@@ -176,8 +177,8 @@ body{
   position: absolute;
   top: 0;
   left: 54%;
-  width: 2rem;
-  height: 2rem;
+  width: 1.5rem;
+  height: 1.5rem;
   background-color: #a50000;
   border-radius: 3rem;
 }
@@ -238,8 +239,9 @@ body{
   position: fixed;
   top: 45%;
   left: 50%;
-  transform: translate(-50%,-50%);
   text-align: center;
+  padding: 0 5rem;
+  transform: translate(-50%,-50%);
 }
 
 .project_box .project_title h2{
@@ -279,10 +281,21 @@ body{
 
 /* list_sec */
 .list_sec{
-  margin-top: 10rem;
-  position: relative;
-  background-color: #000;
   color: #fff;
+  position: relative;
+}
+
+.list_sec .list_wrap{
+  position: relative;
+  width: 100%;
+  height: 130vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Pretendard Variable';
+  background: #000;
+  padding-top: 10rem;
 }
 
 .list_sec .list_title{
@@ -293,26 +306,20 @@ body{
   text-align: center;
 }
 
-.list_sec .list_wrap{
-  padding-top: 30rem;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Pretendard Variable';
-}
-
 .list_sec .list_wrap .list{
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   border-top: 2px solid #333;
   padding: 10rem 5rem;
   transition: 0.2s;
   font-size: 2.4rem;
   font-weight: 400;
+}
+
+.list_sec .list_wrap .list:last-child{
+  border-bottom: 2px solid #333;
 }
 
 .list_sec .list_wrap .list:hover{
@@ -324,8 +331,8 @@ body{
   position: fixed;
   top: 0;
   left: 0;
-  width: 35rem;
-  height: 25rem;
+  width: 30rem;
+  height: 20rem;
   opacity: 0;
   object-fit: cover;
 }
@@ -341,6 +348,10 @@ body{
 
 /* contact_sec */
 .contact_sec{
+  padding: 0 5rem;
+}
+
+.contact_wrap{
   width: 100%;
   height: 100vh;
   position: relative;
@@ -353,7 +364,7 @@ body{
   margin: 0 auto;
   text-align: left;
   position: absolute;
-  top: 50%;
+  top: 35%;
   left: 50%;
   transform: translate(-50%,-50%);
 }
@@ -377,9 +388,6 @@ body{
   color: #fff;
 }
 
-/* .footer_sec */
-
-
 @media (max-width: 1024px){
 
   .main_sec .main_text .text{
@@ -387,10 +395,6 @@ body{
   }
 
   /* about_sec */
-  .about_sec .about_title{
-    padding: 0 5rem;
-  }
-
   .about_sec .about_title h2::after{
     display: none;
   }
@@ -401,16 +405,20 @@ body{
 
   /* contact_sec */
   .contact_sec .contact_title{
-    padding: 0 5rem;
+    text-align: left;
   }
 
   .contact_sec .contact_title h3{
-    font-size: 3.6rem;
+    font-size: 4.2rem;
   }
 }
 
 
 @media (max-width: 768px){
+
+  .list_sec .list_wrap{
+    height: 100vh;
+  }
 
   .list_sec .list_wrap .list .tag{
     font-size: 2rem;
@@ -420,12 +428,19 @@ body{
   .list_sec .list_wrap .list{
     flex-direction: column;
     font-size: 2.4rem;
-    padding: 2rem;
+  }
+
+  .contact_sec .contact_title h3{
+    font-size: 2.8rem;
   }
 }
 
 @media (max-width: 540px){
   .main_sec .main_text .text{
     font-size: 4.8rem;
+  }
+
+  .contact_sec .contact_title{
+    text-align: center;
   }
 }
